src/components/builder/MagicCard.scss
.cardArt {
    cursor: pointer;
    width: 100%;
}

.cardArtEnlarged {
    width: 130%;
    -webkit-box-shadow: 0px 0px 40px 0px rgba(212,254,255,1);
    -moz-box-shadow: 0px 0px 40px 0px rgba(212,254,255,1);
    box-shadow: 0px 0px 40px 0px rgba(212,254,255,1);
}

.unclickable {
    cursor: default;
}

/* Tooltip text */
.tooltipImage {
    cursor: pointer;
    visibility: hidden;
    position: absolute;
    left: -15%;
    bottom: -20%;
    z-index: 5;
    pointer-events: none; //Causes the mouse to *phase through*
}
  
/* Show the tooltip text when you mouse over the tooltip container */
div:hover .tooltipImage{
    visibility: visible;
}

//Animations

.flash-anim{
    -webkit-animation-name: flash;
    -webkit-animation-duration: 0.25s;
    animation-name: flash;
    animation-duration: 0.25s;
}

/* Chrome, Safari, Opera */
@-webkit-keyframes flash {
 0% {opacity: 100% }
 70% {opacity: 30%}
 100% {opacity: 100%}
}

/* Standard syntax */
@keyframes flash {
 0% {opacity: 0}
 70% {opacity: 30%}
 100% {opacity: 100%}
}

